@@ -1,3 +1,10 @@
+2010-05-12  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* time.h (asctime_r): New macro.
+	(ctime_r): Fix the gcc extension macro to return the correct pointer.
+	(gmtime_r): Likewise.
+	(localtime_r): Likewise.
+
 2010-04-27  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* dirent.h (DIR): Change dd_handle from long to intptr_t type for win64
